Created data transformation file

--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": 73,
    "id": "253d3df7",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 165,
+   "execution_count": 74,
    "id": "66bcd730",
    "metadata": {},
    "outputs": [
@@ -24,7 +24,7 @@
        "'C:\\\\Users\\\\satka\\\\OneDrive\\\\Desktop\\\\recommendation-system\\\\data'"
       ]
      },
-     "execution_count": 165,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 166,
+   "execution_count": 75,
    "id": "b4ed7319",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": 76,
    "id": "0c897fa0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 77,
    "id": "ec96f943",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 78,
    "id": "6500fbb8",
    "metadata": {},
    "outputs": [],
@@ -76,17 +76,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 79,
    "id": "e0f37141",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anime = anime.iloc[0:8000]"
+    "#anime = anime.iloc[0:8000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 80,
    "id": "196a74c3",
    "metadata": {},
    "outputs": [
@@ -98,7 +98,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 171,
+     "execution_count": 80,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +109,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 81,
+   "id": "c895f232",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 13501 entries, 0 to 13500\n",
+      "Data columns (total 11 columns):\n",
+      " #   Column       Non-Null Count  Dtype \n",
+      "---  ------       --------------  ----- \n",
+      " 0   name         13501 non-null  object\n",
+      " 1   sypnopsis    13499 non-null  object\n",
+      " 2   image        13492 non-null  object\n",
+      " 3   type         13501 non-null  object\n",
+      " 4   episodes     13501 non-null  object\n",
+      " 5   status       13501 non-null  object\n",
+      " 6   studios      13501 non-null  object\n",
+      " 7   source       13501 non-null  object\n",
+      " 8   genres       11823 non-null  object\n",
+      " 9   demographic  13466 non-null  object\n",
+      " 10  links        13501 non-null  object\n",
+      "dtypes: object(11)\n",
+      "memory usage: 1.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "anime.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "dc7662fd",
    "metadata": {},
    "outputs": [],
@@ -119,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 83,
    "id": "edc035da",
    "metadata": {},
    "outputs": [],
@@ -129,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 84,
    "id": "99183feb",
    "metadata": {},
    "outputs": [],
@@ -139,15 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "c660b30b",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 85,
    "id": "a932d424",
    "metadata": {},
    "outputs": [],
@@ -157,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 117,
    "id": "f76e7a39",
    "metadata": {},
    "outputs": [],
@@ -168,37 +195,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 118,
    "id": "8ab84681",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anime_1 = anime_1.reset_index(drop=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 178,
-   "id": "8d4ef9fa",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "anime_1 = anime_1.reset_index(drop=True)\n",
     "anime_1 = anime_1.rename({'name':'title'},axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
-   "id": "6f0c590b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "anime_1.tags = anime_1.tags.map(lambda x: x.replace('\\n',\" \"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": null,
    "id": "521b43bf",
    "metadata": {},
    "outputs": [],
@@ -210,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 120,
    "id": "bb0e6617",
    "metadata": {},
    "outputs": [],
@@ -221,54 +229,235 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": null,
+   "id": "92d8d53e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
    "id": "8c101543",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def stem(text):\n",
+    "def removing_blank_lines(text):\n",
+    "    return text.replace('\\n',\" \")\n",
+    "\n",
+    "def removing_pre_suff_ix(text):\n",
     "    y = []\n",
     "    \n",
     "    for i in text.split():\n",
     "        y.append(ps.stem(i))\n",
     "    \n",
-    "    return \" \".join(y)"
+    "    return \" \".join(y)\n",
+    "\n",
+    "def converting_into_vectors(text):\n",
+    "    vec = cv.fit_transform(text).toarray()\n",
+    "    return vec\n",
+    "\n",
+    "def finding_similarity(vec):\n",
+    "    similarity = cosine_similarity(vec)\n",
+    "    return similarity"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 127,
    "id": "01e8e16b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "anime_1['tags'] = anime_1['tags'].apply(stem)"
+    "anime_1.tags = anime_1.tags.apply(removing_blank_lines)\n",
+    "anime_1.tags = anime_1.tags.apply(removing_blank_lines)\n",
+    "vectors = converting_into_vectors(anime_1.tags)\n",
+    "similarity = finding_similarity(vectors)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
-   "id": "749791fa",
+   "execution_count": 131,
+   "id": "c7b531b9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>image</th>\n",
+       "      <th>title</th>\n",
+       "      <th>tags</th>\n",
+       "      <th>links</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>30</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/12/89...</td>\n",
+       "      <td>Gintama.: Shirogane no Tamashii-hen</td>\n",
+       "      <td>after the fierc battl on rakuyou, the untold p...</td>\n",
+       "      <td>https://myanimelist.net/anime/36838/Gintama__S...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1170/...</td>\n",
+       "      <td>Vinland Saga Season 2</td>\n",
+       "      <td>after hi father' death and the destruct of hi ...</td>\n",
+       "      <td>https://myanimelist.net/anime/49387/Vinland_Sa...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1741/...</td>\n",
+       "      <td>Monogatari Series: Off &amp; Monster Season</td>\n",
+       "      <td>koyomi araragi spent hi last year of high scho...</td>\n",
+       "      <td>https://myanimelist.net/anime/57864/Monogatari...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1792/...</td>\n",
+       "      <td>Jujutsu Kaisen 2nd Season</td>\n",
+       "      <td>the year is 2006, and the hall of tokyo prefec...</td>\n",
+       "      <td>https://myanimelist.net/anime/51009/Jujutsu_Ka...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>34</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1918/...</td>\n",
+       "      <td>Mob Psycho 100 II</td>\n",
+       "      <td>shigeo \"mob\" kageyama is now matur and underst...</td>\n",
+       "      <td>https://myanimelist.net/anime/37510/Mob_Psycho...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>35</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1643/...</td>\n",
+       "      <td>Boku no Kokoro no Yabai Yatsu 2nd Season</td>\n",
+       "      <td>after an event winter break, kyoutar ichikawa ...</td>\n",
+       "      <td>https://myanimelist.net/anime/55690/Boku_no_Ko...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>36</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1000/...</td>\n",
+       "      <td>Shingeki no Kyojin: The Final Season</td>\n",
+       "      <td>gabi braun and falco grice have been train the...</td>\n",
+       "      <td>https://myanimelist.net/anime/40028/Shingeki_n...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>37</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1084/...</td>\n",
+       "      <td>Kizumonogatari III: Reiketsu-hen</td>\n",
+       "      <td>after help reviv the legendari vampir kiss-sho...</td>\n",
+       "      <td>https://myanimelist.net/anime/31758/Kizumonoga...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>38</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/1448/...</td>\n",
+       "      <td>Bocchi the Rock!</td>\n",
+       "      <td>yearn to make friend and perform live with a b...</td>\n",
+       "      <td>https://myanimelist.net/anime/47917/Bocchi_the...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>39</th>\n",
+       "      <td>https://cdn.myanimelist.net/images/anime/7/819...</td>\n",
+       "      <td>Haikyuu!! Karasuno Koukou vs. Shiratorizawa Ga...</td>\n",
+       "      <td>after the victori against aoba jousai high, ka...</td>\n",
+       "      <td>https://myanimelist.net/anime/32935/Haikyuu_Ka...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                image  \\\n",
+       "30  https://cdn.myanimelist.net/images/anime/12/89...   \n",
+       "31  https://cdn.myanimelist.net/images/anime/1170/...   \n",
+       "32  https://cdn.myanimelist.net/images/anime/1741/...   \n",
+       "33  https://cdn.myanimelist.net/images/anime/1792/...   \n",
+       "34  https://cdn.myanimelist.net/images/anime/1918/...   \n",
+       "35  https://cdn.myanimelist.net/images/anime/1643/...   \n",
+       "36  https://cdn.myanimelist.net/images/anime/1000/...   \n",
+       "37  https://cdn.myanimelist.net/images/anime/1084/...   \n",
+       "38  https://cdn.myanimelist.net/images/anime/1448/...   \n",
+       "39  https://cdn.myanimelist.net/images/anime/7/819...   \n",
+       "\n",
+       "                                                title  \\\n",
+       "30                Gintama.: Shirogane no Tamashii-hen   \n",
+       "31                              Vinland Saga Season 2   \n",
+       "32            Monogatari Series: Off & Monster Season   \n",
+       "33                          Jujutsu Kaisen 2nd Season   \n",
+       "34                                  Mob Psycho 100 II   \n",
+       "35           Boku no Kokoro no Yabai Yatsu 2nd Season   \n",
+       "36               Shingeki no Kyojin: The Final Season   \n",
+       "37                   Kizumonogatari III: Reiketsu-hen   \n",
+       "38                                   Bocchi the Rock!   \n",
+       "39  Haikyuu!! Karasuno Koukou vs. Shiratorizawa Ga...   \n",
+       "\n",
+       "                                                 tags  \\\n",
+       "30  after the fierc battl on rakuyou, the untold p...   \n",
+       "31  after hi father' death and the destruct of hi ...   \n",
+       "32  koyomi araragi spent hi last year of high scho...   \n",
+       "33  the year is 2006, and the hall of tokyo prefec...   \n",
+       "34  shigeo \"mob\" kageyama is now matur and underst...   \n",
+       "35  after an event winter break, kyoutar ichikawa ...   \n",
+       "36  gabi braun and falco grice have been train the...   \n",
+       "37  after help reviv the legendari vampir kiss-sho...   \n",
+       "38  yearn to make friend and perform live with a b...   \n",
+       "39  after the victori against aoba jousai high, ka...   \n",
+       "\n",
+       "                                                links  \n",
+       "30  https://myanimelist.net/anime/36838/Gintama__S...  \n",
+       "31  https://myanimelist.net/anime/49387/Vinland_Sa...  \n",
+       "32  https://myanimelist.net/anime/57864/Monogatari...  \n",
+       "33  https://myanimelist.net/anime/51009/Jujutsu_Ka...  \n",
+       "34  https://myanimelist.net/anime/37510/Mob_Psycho...  \n",
+       "35  https://myanimelist.net/anime/55690/Boku_no_Ko...  \n",
+       "36  https://myanimelist.net/anime/40028/Shingeki_n...  \n",
+       "37  https://myanimelist.net/anime/31758/Kizumonoga...  \n",
+       "38  https://myanimelist.net/anime/47917/Bocchi_the...  \n",
+       "39  https://myanimelist.net/anime/32935/Haikyuu_Ka...  "
+      ]
+     },
+     "execution_count": 131,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "vectors = cv.fit_transform(anime_1['tags']).toarray()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 185,
-   "id": "91ac15f3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "similarity = cosine_similarity(vectors)"
+    "anime_1[30:40]"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "163acbb5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#from sklearn.metrics.pairwise import cosine_similarity\n",
+    "#similarity = cosine_similarity(vectors)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
    "id": "404a1f15",
    "metadata": {},
    "outputs": [],
@@ -279,14 +468,15 @@
     "    anime_list = sorted(list(enumerate(distances)),reverse=True,key=lambda x:x[1])[1:8]\n",
     "\n",
     "    for i in anime_list:\n",
-    "        print(anime_1.iloc[i[0]].title)\n",
-    "        print(anime_1.iloc[i[0]].links)\n",
-    "        print(i[0])"
+    "        #print(' index no. ', '|', ' title ', '|', ' similarity score ')\n",
+    "        print(i[0], '|', anime_1.iloc[i[0]].title, '|', i[1])\n",
+    "        print(anime_1.iloc[i[0]].links, '\\n')\n",
+    "        \n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 142,
    "id": "bfa64fd5",
    "metadata": {},
    "outputs": [
@@ -294,54 +484,51 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Shingeki no Kyojin\n",
-      "https://myanimelist.net/anime/16498/Shingeki_no_Kyojin\n",
-      "110\n",
-      "Shingeki no Kyojin Season 2\n",
-      "https://myanimelist.net/anime/25777/Shingeki_no_Kyojin_Season_2\n",
-      "123\n",
-      "Shingeki no Kyojin Season 3\n",
-      "https://myanimelist.net/anime/35760/Shingeki_no_Kyojin_Season_3\n",
-      "78\n",
-      "Shingeki no Kyojin: The Final Season Part 2\n",
-      "https://myanimelist.net/anime/48583/Shingeki_no_Kyojin__The_Final_Season_Part_2\n",
-      "42\n",
-      "Shingeki no Kyojin Season 2 Movie: Kakusei no Houkou\n",
-      "https://myanimelist.net/anime/36702/Shingeki_no_Kyojin_Season_2_Movie__Kakusei_no_Houkou\n",
-      "720\n",
-      "Shingeki no Kyojin: The Final Season - Kanketsu-hen\n",
-      "https://myanimelist.net/anime/51535/Shingeki_no_Kyojin__The_Final_Season_-_Kanketsu-hen\n",
-      "26\n",
-      "Tokyo Ghoul\n",
-      "https://myanimelist.net/anime/22319/Tokyo_Ghoul\n",
-      "935\n",
-      "Shingeki! Kyojin Chuugakkou\n",
-      "https://myanimelist.net/anime/31374/Shingeki_Kyojin_Chuugakkou\n",
-      "2606\n"
+      "3720 | Radiant | 0.28\n",
+      "https://myanimelist.net/anime/37202/Radiant \n",
+      "\n",
+      "6790 | Dokyuu Hentai HxEros | 0.28\n",
+      "https://myanimelist.net/anime/40623/Dokyuu_Hentai_HxEros \n",
+      "\n",
+      "100 | Jujutsu Kaisen | 0.27\n",
+      "https://myanimelist.net/anime/40748/Jujutsu_Kaisen \n",
+      "\n",
+      "169 | Jujutsu Kaisen 0 Movie | 0.25\n",
+      "https://myanimelist.net/anime/48561/Jujutsu_Kaisen_0_Movie \n",
+      "\n",
+      "666 | Dead Dead Demons Dededede Destruction (OVA) | 0.25\n",
+      "https://myanimelist.net/anime/58883/Dead_Dead_Demons_Dededede_Destruction_OVA \n",
+      "\n",
+      "1651 | Dead Dead Demons Dededede Destruction | 0.25\n",
+      "https://myanimelist.net/anime/51358/Dead_Dead_Demons_Dededede_Destruction \n",
+      "\n",
+      "2390 | True Tears | 0.25\n",
+      "https://myanimelist.net/anime/2129/True_Tears \n",
+      "\n"
      ]
     }
    ],
    "source": [
-    "recommend('Shingeki no Kyojin')"
+    "recommend('Jujutsu Kaisen 2nd Season')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 190,
+   "execution_count": 100,
    "id": "791c8dca",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[(720, np.float64(0.46277514967945194)),\n",
-       " (123, np.float64(0.39129428821566115)),\n",
-       " (36, np.float64(0.32404377887774766)),\n",
-       " (42, np.float64(0.3213720099233944)),\n",
-       " (110, np.float64(0.31051721396879134))]"
+       "[(720, np.float64(0.4583333333333335)),\n",
+       " (123, np.float64(0.37709985557577297)),\n",
+       " (42, np.float64(0.32076651393589245)),\n",
+       " (26, np.float64(0.3051285766293647)),\n",
+       " (110, np.float64(0.29120520167670094))]"
       ]
      },
-     "execution_count": 190,
+     "execution_count": 100,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -352,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 101,
    "id": "1564ee97",
    "metadata": {},
    "outputs": [
@@ -366,7 +553,7 @@
        "Name: 720, dtype: object"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 101,
      "metadata": {},
      "output_type": "execute_result"
     }
