--- a/research/trials.ipynb
+++ b/research/trials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 1,
    "id": "253d3df7",
    "metadata": {},
    "outputs": [],
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 2,
    "id": "b4ed7319",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 3,
    "id": "0c897fa0",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 4,
    "id": "ec96f943",
    "metadata": {},
    "outputs": [],
@@ -66,12 +66,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "id": "6500fbb8",
    "metadata": {},
    "outputs": [],
    "source": [
     "anime = anime[['name','sypnopsis','image','type','episodes','status','studios','source','genres','demographic','links']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "c28abf0f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Two years after the Summit War in which Straw Hat pirate Luffy lost his brother Ace, the story takes place on the Sabaody Archipelago. The protagonist, a young girl who has a strong admiration for Nami, sets off on a small adventure. This is an ensemble drama that focuses on people who do not \"pursue\" ONE PIECE, depicting the reunion of the Straw Hat Pirates from their perspective.\\n\\n(Source: Official site, translated)'"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "'\\n'.join(anime[anime.name ==\"One Piece Fan Letter\"].sypnopsis.to_list())"
    ]
   },
   {
